k8s/traefik/ingress-routes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app1-route
  namespace: parcial-gffh
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`app1.local`)
      kind: Rule
      services:
        - name: app1
          port: 80

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app2-route
  namespace: parcial-gffh
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`app2.local`)
      kind: Rule
      services:
        - name: app2
          port: 80

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app3-route
  namespace: parcial-gffh
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`app3.local`)
      kind: Rule
      services:
        - name: app3
          port: 80

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app4-route
  namespace: parcial-gffh
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`app4.local`)
      kind: Rule
      services:
        - name: app4
          port: 80
